--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -6,7 +6,7 @@
 
  @font-face {
   font-display: swap;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Papyrus', sans-serif;
   font-style: normal;
   font-weight: normal;
 }
