--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -6,7 +6,7 @@
 
  @font-face {
   font-display: swap;
-  font-family: 'Papyrus', sans-serif;
+  font-family: 'Papyrus', serif;
   font-style: normal;
   font-weight: normal;
 }
@@ -23,7 +23,7 @@
 
   --font-size-base: 16px;
 
-  --font-body: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+  --font-body: 'Papyrus', Helvetica, Arial ;
   --font-weight-body: 400;
   --font-weight-heading: 900;
 
