--- a/src/styles/components/now-playing.scss
+++ b/src/styles/components/now-playing.scss
@@ -16,7 +16,7 @@
   &__cover,
   &__details {
     padding: var(--spacing-m);
-    text-align: center;
+    text-align: left;
     width: 100%;
   }
 
